# Ros2-MuJoCo-Docker

./: .gitmodules  Dockerfile  README.md  docker-compose.yaml
base/: Dockerfile
combined/: Dockerfile  build.sh
combined/src/google_robot/google_robot_description/: package.xml
combined/src/google_robot/google_robot_description/meshes/: converted_link_base_0_00.stl  converted_link_base_1_01.stl  converted_link_base_1_03.stl  converted_link_base_1_08.stl  converted_link_base_1_12.stl  converted_link_base_1_16.stl  converted_link_elbow.stl  converted_link_elbow_v.stl  converted_link_gripper_v.stl  converted_link_head_pan.stl  converted_link_shoulder_v.stl  converted_link_wheel_v.stl
combined/src/google_robot/google_robot_moveit/: .setup_assistant
combined/src/interactive_marker/: package.xml
combined/src/interactive_marker/launch/: google_robot.launch.py  panda_robot.launch.py
combined/src/mujoco/: CMakeLists.txt  package.xml
combined/src/mujoco/worlds/: google_robot_scene.xml  panda_robot_scene.xml  scene.xml
franka/: Dockerfile
google_robot/: Dockerfile
google_robot/src/interactive_marker/: package.xml
google_robot/src/interactive_marker/launch/: interactive_marker.launch.py
google_robot/src/resources/moveit/: package.xml
google_robot/src/resources/mujoco/: CMakeLists.txt  package.xml
src/google_robot/google_robot_description/: CMakeLists.txt
src/google_robot/google_robot_moveit/: CMakeLists.txt  package.xml
src/interactive_marker/launch/: google_robot.launch.py  panda_robot.launch.py
src/mujoco/worlds/: kitchen_scene.xml
(+91 files in other folders)
