<?xml version="1.0"?>
<package format="3">
  <name>google_robot_description</name>
  <version>2.0.7</version>
  <description>google robot Resources used for MoveIt integration</description>

  <author email="max@loedige-net.de">Max Lödgie</author>
  <maintainer email="max@loedige-net.de">Max Lödgie</maintainer>

  <license>BSD</license>
  <url type="website">http://moveit.ros.org</url>
  <url type="bugtracker">https://github.com/ros-planning/moveit-resources/issues</url>
  <url type="repository">https://github.com/ros-planning/moveit-resources</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
